--- a/swiss_factur_x_e_invoicing/factur.html
+++ b/swiss_factur_x_e_invoicing/factur.html
@@ -42,7 +42,7 @@
           <ram:ChargeAmount>{{ "{:.2f}".format(item.gross_price) }}</ram:ChargeAmount>
         </ram:GrossPriceProductTradePrice>
         <ram:NetPriceProductTradePrice>
-          <ram:ChargeAmount>{{ "{:.2f}".format(item.rate) }}</ram:ChargeAmount>
+          <ram:ChargeAmount>{{ "{:.2f}".format(item.gross_price) }}</ram:ChargeAmount>
         </ram:NetPriceProductTradePrice>
       </ram:SpecifiedLineTradeAgreement>
       <ram:SpecifiedLineTradeDelivery>
